gcc/ 	PR middle-end/50873 	* optabs.c (maybe_legitimize_operand_same_code): Use copy_to_mode_reg 	instead of force_reg.  Do nothing if the address is already a 	non-virtual pseudo register.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@182244 138bc75d-0d04-0410-961f-82ee72b054a4